# trading-engine-data-adapter-py

./: .gitignore  .markdownlint.json  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.claude/plugins/git_quality_standards/scripts/: install-git-hooks-enhanced.sh
.github/: pull_request_template.md
.github/workflows/: pr-checks.yml  validation.yml
docs/prs/: feat-epic-TSE-0001-named-components-foundation.md  feature-epic-TSE-0003-data-adapter-foundation.md  refactor-epic-TSE-0001-data-adapters-and-orchestrator.md  refactor-epic-TSE-0001.4-data-adapters-and-orchestrator.md
src/trading_data_adapter/: __init__.py  config.py  factory.py
src/trading_data_adapter/adapters/stub/: __init__.py  stub_repository.py
src/trading_data_adapter/interfaces/: __init__.py  cache.py  orders.py  positions.py  service_discovery.py  strategies.py  trades.py
src/trading_data_adapter/models/: __init__.py  order.py  position.py  strategy.py  trade.py
tests/: __init__.py  conftest.py  test_multi_instance_derivation.py
tests/integration/: __init__.py  test_postgres_behavior.py  test_redis_behavior.py
tests/unit/: __init__.py  test_smoke.py
